--- a/index.html
+++ b/index.html
@@ -269,12 +269,6 @@
   <footer><p class="footer-text"><span>$ET</span> — the ticker with a built-in dollar sign — og contract on solana — dyor</p></footer>
 </div>
 
-<!-- CLICK TO START (audio requires user interaction) -->
-<div id="audioGate" style="position:fixed;inset:0;z-index:20000;background:var(--darker);display:flex;flex-direction:column;justify-content:center;align-items:center;cursor:pointer;transition:opacity 0.5s ease;">
-  <div style="font-family:'Silkscreen',cursive;font-size:clamp(20px,4vw,36px);color:var(--green);text-shadow:0 0 20px var(--green),0 0 60px rgba(57,255,20,0.3);letter-spacing:6px;margin-bottom:24px;animation:fadeIn 1s ease forwards,float 3s ease-in-out infinite;">$ET</div>
-  <div style="font-family:'Space Mono',monospace;font-size:13px;color:var(--text-dim);letter-spacing:4px;text-transform:uppercase;animation:blink 1.5s ease-in-out infinite;">[ click to initiate ]</div>
-  <style>@keyframes blink{0%,100%{opacity:0.4}50%{opacity:1}}</style>
-</div>
 
 <script>
 (function() {
@@ -293,7 +287,6 @@
   const galaxyCoord = document.getElementById('galaxyCoord');
   const galaxyStar = document.getElementById('galaxyStar');
   const galaxyStarLabel = document.getElementById('galaxyStarLabel');
-  const audioGate = document.getElementById('audioGate');
 
   const setProg = v => { barEl.style.width = v+'%'; pctEl.textContent = Math.round(v)+'%'; };
   const wait = ms => new Promise(r => setTimeout(r, ms));
@@ -305,41 +298,25 @@
   function initAudio() {
     audioCtx = new (window.AudioContext || window.webkitAudioContext)();
     masterGain = audioCtx.createGain();
-    masterGain.gain.value = 0.15;
+    masterGain.gain.value = 0.08;
     masterGain.connect(audioCtx.destination);
   }
 
-  // Tiny soft tick — like a key press
+  // Tiny soft tick
   function sfxTick() {
     if (!audioCtx) return;
     const t = audioCtx.currentTime;
     const osc = audioCtx.createOscillator();
     const gain = audioCtx.createGain();
     osc.type = 'square';
-    osc.frequency.setValueAtTime(800 + Math.random() * 200, t);
-    gain.gain.setValueAtTime(0.04, t);
-    gain.gain.exponentialRampToValueAtTime(0.001, t + 0.02);
+    osc.frequency.setValueAtTime(700 + Math.random() * 300, t);
+    gain.gain.setValueAtTime(0.03, t);
+    gain.gain.exponentialRampToValueAtTime(0.001, t + 0.015);
     osc.connect(gain); gain.connect(masterGain);
-    osc.start(t); osc.stop(t + 0.025);
+    osc.start(t); osc.stop(t + 0.02);
   }
 
-  // Soft low hum drone — background
-  function sfxDrone() {
-    if (!audioCtx) return;
-    const t = audioCtx.currentTime;
-    const osc = audioCtx.createOscillator();
-    const gain = audioCtx.createGain();
-    osc.type = 'sine';
-    osc.frequency.setValueAtTime(60, t);
-    gain.gain.setValueAtTime(0, t);
-    gain.gain.linearRampToValueAtTime(0.06, t + 3);
-    gain.gain.linearRampToValueAtTime(0.04, t + 20);
-    gain.gain.linearRampToValueAtTime(0, t + 28);
-    osc.connect(gain); gain.connect(masterGain);
-    osc.start(t); osc.stop(t + 28);
-  }
-
-  // Warning — two short low tones
+  // Two quiet low tones for signal detection
   function sfxWarn() {
     if (!audioCtx) return;
     const t = audioCtx.currentTime;
@@ -348,76 +325,11 @@
       const gain = audioCtx.createGain();
       osc.type = 'sine';
       osc.frequency.setValueAtTime(440, t + i * 0.2);
-      gain.gain.setValueAtTime(0.1, t + i * 0.2);
-      gain.gain.exponentialRampToValueAtTime(0.001, t + i * 0.2 + 0.12);
+      gain.gain.setValueAtTime(0.06, t + i * 0.2);
+      gain.gain.exponentialRampToValueAtTime(0.001, t + i * 0.2 + 0.1);
       osc.connect(gain); gain.connect(masterGain);
-      osc.start(t + i * 0.2); osc.stop(t + i * 0.2 + 0.15);
+      osc.start(t + i * 0.2); osc.stop(t + i * 0.2 + 0.12);
     }
-  }
-
-  // Signal found — slow rising tone
-  function sfxSignal() {
-    if (!audioCtx) return;
-    const t = audioCtx.currentTime;
-    const osc = audioCtx.createOscillator();
-    const gain = audioCtx.createGain();
-    osc.type = 'sine';
-    osc.frequency.setValueAtTime(300, t);
-    osc.frequency.exponentialRampToValueAtTime(1200, t + 1.8);
-    gain.gain.setValueAtTime(0, t);
-    gain.gain.linearRampToValueAtTime(0.08, t + 0.3);
-    gain.gain.linearRampToValueAtTime(0.06, t + 1.5);
-    gain.gain.exponentialRampToValueAtTime(0.001, t + 2.2);
-    osc.connect(gain); gain.connect(masterGain);
-    osc.start(t); osc.stop(t + 2.3);
-  }
-
-  // Galaxy — deep space pad
-  function sfxSpace() {
-    if (!audioCtx) return;
-    const t = audioCtx.currentTime;
-    [55, 82.5, 110].forEach((f, i) => {
-      const osc = audioCtx.createOscillator();
-      const gain = audioCtx.createGain();
-      osc.type = 'sine';
-      osc.frequency.setValueAtTime(f, t);
-      gain.gain.setValueAtTime(0, t);
-      gain.gain.linearRampToValueAtTime(0.04 - i * 0.01, t + 1.5);
-      gain.gain.linearRampToValueAtTime(0.03 - i * 0.008, t + 8);
-      gain.gain.exponentialRampToValueAtTime(0.001, t + 12);
-      osc.connect(gain); gain.connect(masterGain);
-      osc.start(t); osc.stop(t + 12);
-    });
-  }
-
-  // Locked — single clean confirmation tone
-  function sfxLock() {
-    if (!audioCtx) return;
-    const t = audioCtx.currentTime;
-    const osc = audioCtx.createOscillator();
-    const gain = audioCtx.createGain();
-    osc.type = 'sine';
-    osc.frequency.setValueAtTime(880, t);
-    gain.gain.setValueAtTime(0.1, t);
-    gain.gain.exponentialRampToValueAtTime(0.001, t + 0.6);
-    osc.connect(gain); gain.connect(masterGain);
-    osc.start(t); osc.stop(t + 0.7);
-  }
-
-  // Contact — soft two-note resolution
-  function sfxContact() {
-    if (!audioCtx) return;
-    const t = audioCtx.currentTime;
-    [660, 880].forEach((f, i) => {
-      const osc = audioCtx.createOscillator();
-      const gain = audioCtx.createGain();
-      osc.type = 'sine';
-      osc.frequency.setValueAtTime(f, t + i * 0.3);
-      gain.gain.setValueAtTime(0.08, t + i * 0.3);
-      gain.gain.exponentialRampToValueAtTime(0.001, t + i * 0.3 + 0.8);
-      osc.connect(gain); gain.connect(masterGain);
-      osc.start(t + i * 0.3); osc.stop(t + i * 0.3 + 0.9);
-    });
   }
 
   // Blip on every terminal line
@@ -568,7 +480,6 @@
   // ======== MAIN SEQUENCE ========
   async function runSequence() {
     const d = 110;
-    sfxDrone();
 
     // ---- BOOT PHASE ----
     await addLine('$ et_signal_relay v4.2.0', 'green');
@@ -687,7 +598,6 @@
     await addLine('[rx]   ██ ANOMALOUS SIGNAL DETECTED ██', 'warn', d);
     await wait(200);
     await addLine('[rx]   ██ ANOMALOUS SIGNAL DETECTED ██', 'warn', d*0.3);
-    sfxSignal();
     setProg(76);
     await addLine('[rx]   ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░', 'dim', d*0.5);
     await wait(300);
@@ -723,7 +633,6 @@
     await wait(600);
 
     // ======== GALAXY PHASE ========
-    sfxSpace();
     initGalaxy();
     cam.running = true;
     cam.x = SOL.x; cam.y = SOL.y; cam.zoom = 2.8;
@@ -745,7 +654,6 @@
     await animateTo(trace, { progress: 1 }, 2400);
 
     // Signal found!
-    sfxLock();
     trace.pulsing = true;
     trace.pulseTime = performance.now();
     galaxyStatus.innerHTML = 'status: <span style="color:#ffaa00">⚠ SIGNAL LOCKED</span>';
@@ -763,7 +671,6 @@
     galaxyStarLabel.classList.add('show');
 
     galaxyStatus.innerHTML = 'status: <span style="color:var(--green);font-weight:700">✓ CONTACT ESTABLISHED</span>';
-    sfxContact();
     galaxyFinal.classList.add('show');
     await wait(3000);
 
@@ -771,17 +678,20 @@
     pageWrapper.classList.remove('hidden');
   }
 
-  function startEverything() {
-    initAudio();
-    audioGate.style.opacity = '0';
-    setTimeout(() => { audioGate.style.display = 'none'; }, 500);
-    if (document.fonts && document.fonts.ready) {
-      document.fonts.ready.then(() => setTimeout(runSequence, 250));
-    } else { setTimeout(runSequence, 500); }
+  // Auto-start sequence. Audio inits on first user interaction (browser requirement).
+  function tryInitAudio() {
+    if (!audioCtx) { initAudio(); }
+    document.removeEventListener('click', tryInitAudio);
+    document.removeEventListener('touchstart', tryInitAudio);
+    document.removeEventListener('keydown', tryInitAudio);
   }
+  document.addEventListener('click', tryInitAudio, { once: false });
+  document.addEventListener('touchstart', tryInitAudio, { once: false });
+  document.addEventListener('keydown', tryInitAudio, { once: false });
 
-  audioGate.addEventListener('click', startEverything, { once: true });
-  audioGate.addEventListener('touchstart', startEverything, { once: true });
+  if (document.fonts && document.fonts.ready) {
+    document.fonts.ready.then(() => setTimeout(runSequence, 250));
+  } else { setTimeout(runSequence, 500); }
 })();
 </script>
 
